--- a/src/twig/pages/card.twig
+++ b/src/twig/pages/card.twig
@@ -41,22 +41,14 @@
                     </div>
                 </div>
                 <div class="p-card__size-list margin-small">
-                    <button class="p-card__size-item _active" type="button">
-                        <span class="p-card__size-item-main">25</span>
-                        <span class="p-card__size-item-second">35-39</span>
-                    </button>
-                    <button class="p-card__size-item" type="button">
-                        <span class="p-card__size-item-main">25</span>
-                        <span class="p-card__size-item-second">35-39</span>
-                    </button>
-                    <button class="p-card__size-item" type="button">
-                        <span class="p-card__size-item-main">25</span>
-                        <span class="p-card__size-item-second">35-39</span>
-                    </button>
-                    <button class="p-card__size-item" type="button">
-                        <span class="p-card__size-item-main">25</span>
-                        <span class="p-card__size-item-second">35-39</span>
-                    </button>
+                    <div class="p-card__size-item _active js-size-item">
+                        <label class="p-card__size-item-main" for="size25">25<span>25-21</span></label>
+                        <input type="radio" id="size25" name="size" checked>
+                    </div>
+                    <div class="p-card__size-item js-size-item">
+                        <label class="p-card__size-item-main" for="size28">28<span>25-21</span></label>
+                        <input type="radio" id="size28" name="size">
+                    </div>
                 </div>
                 <button class="btn _paper _middle">Добавить в корзину</button>
                 <div class="p-card__text">
