--- a/src/sass/pages/p-contacts.scss
+++ b/src/sass/pages/p-contacts.scss
@@ -43,6 +43,13 @@
         margin: 0 auto;
     }
 
+    .accordion__item {
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: var(--c-white);
+    }
+
     .form-inner {
         max-width: 1200px;
         @include media-breakpoint-down(sm) {
