--- a/src/twig/components/requisites.twig
+++ b/src/twig/components/requisites.twig
@@ -1,6 +1,5 @@
-<section class="requisites form-inner">
+<section class="requisites">
     Владелец: ИП Дедков<br>
-    Дистрибьютор: ООО «Торговая Компания «Параллель»:<br>
     Юридический адрес организации:<br>
     111524, Россия, Москва, ул. Электродная, д. 8, стр. 2, пом. Х, комн. 12Б<br>
     ИНН/КПП: 7720475674 / 772001001<br>
