--- a/src/sass/blocks/default/input2.scss
+++ b/src/sass/blocks/default/input2.scss
@@ -14,7 +14,7 @@
 
     &__label {
         position: absolute;
-        top: 0;
+        top: 3px;
         left: 16px;
         font-size: var(--labelFontSize);
         font-weight: 400;
@@ -25,7 +25,7 @@
     &__text {
         width: 100%;
         height: 60px;
-        padding: 14px 16px;
+        padding: 14px 16px 4px;
         border: var(--border);
         border-color: var(--inputBorderColor);
         border-radius: var(--inputBorderRadius);
