--- a/src/sass/blocks/fly-cart.scss
+++ b/src/sass/blocks/fly-cart.scss
@@ -64,6 +64,9 @@
     }
 
     &__item-close {
+        display: block;
+        width: 100%;
+        text-align: right;
         font-size: var(--f-s-body-second);
     }
 
