--- a/src/sass/pages/p-card.scss
+++ b/src/sass/pages/p-card.scss
@@ -81,6 +81,7 @@
     &__size-item-main {
         display: block;
         text-align: center;
+        line-height: 1;
         cursor: pointer;
         span {
             display: block;
