Правка центровки в корзине

--- a/src/sass/blocks/fly-cart.scss
+++ b/src/sass/blocks/fly-cart.scss
@@ -51,6 +51,7 @@
         grid-gap: 8px;
         @include media-breakpoint-up(lg) {
             grid-gap: 16px;
+            align-items: center;
         }
     }
 
