--- a/src/sass/blocks/fly-cart.scss
+++ b/src/sass/blocks/fly-cart.scss
@@ -50,7 +50,7 @@
         grid-template-columns: 1fr 2fr;
         grid-gap: 8px;
         @include media-breakpoint-up(lg) {
-            grid-gap: 16px;
+            grid-gap: 8px 16px;
             align-items: center;
         }
     }
@@ -61,6 +61,7 @@
     }
 
     &__item-sku {
+        margin-bottom: 12px;
         font-size: var(--f-s-body-second);
     }
 
