--- a/src/sass/blocks/fly-cart.scss
+++ b/src/sass/blocks/fly-cart.scss
@@ -4,7 +4,7 @@
     right: 0;
     z-index: 900;
     width: 100vw;
-    max-height: 100vh;
+    height: 100vh;
     padding: 32px 16px 160px;
     background-color: var(--c-bg-light);
     overflow: auto;
