Убрал выделение по умолчанию размера в карточке товара

--- a/src/twig/pages/card.twig
+++ b/src/twig/pages/card.twig
@@ -43,7 +43,7 @@
                 <div class="p-card__size-list margin-small">
                     <div class="p-card__size-item _active js-size-item">
                         <label class="p-card__size-item-main" for="size25">25<span>25-21</span></label>
-                        <input type="radio" id="size25" name="size" checked>
+                        <input type="radio" id="size25" name="size">
                     </div>
                     <div class="p-card__size-item js-size-item">
                         <label class="p-card__size-item-main" for="size28">28<span>25-21</span></label>
