--- a/src/sass/pages/p-card.scss
+++ b/src/sass/pages/p-card.scss
@@ -95,4 +95,9 @@
             text-align: center;
         }
     }
+
+    &__size-btn {
+        margin-top: 12px;
+        font-size: var(--f-s-small);
+    }
 }
