--- a/src/twig/layouts/base.twig
+++ b/src/twig/layouts/base.twig
@@ -25,6 +25,7 @@
 
 {% include 'footer.twig' %}
 {% include '../components/age-control.twig' %}
+{% include '../components/modals.twig' %}
 <div class="overlay js-overlay"></div>
 <div id="svg-icons"></div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
