--- a/src/twig/pages/card.twig
+++ b/src/twig/pages/card.twig
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="p-card__size-list margin-small">
+                <div class="p-card__size-list">
                     <div class="p-card__size-item _active js-size-item">
                         <label class="p-card__size-item-main" for="size25">25<span>25-21</span></label>
                         <input type="radio" id="size25" name="size">
@@ -50,6 +50,9 @@
                         <input type="radio" id="size28" name="size">
                     </div>
                 </div>
+                <button class="p-card__size-btn link _border margin-small" type="button" data-type="modal" data-modal-link="sizes">
+                    Таблица размеров
+                </button>
                 <button class="btn _paper _middle">Добавить в корзину</button>
                 <div class="p-card__text">
                     Универсальная верхняя одежда, идеально подходящая как для летних прогулок, так и для демисезона.
