--- a/src/sass/blocks/default/modal.scss
+++ b/src/sass/blocks/default/modal.scss
@@ -26,7 +26,7 @@
     }
     @include media-breakpoint-up(lg) {
         width: 800px;
-        max-height: 600px;
+        max-height: 640px;
         min-height: auto;
     }
 
@@ -51,6 +51,14 @@
 
     &__title {
         text-align: center;
+    }
+
+    &__inner {
+        img {
+            display: block;
+            width: 100%;
+            object-fit: contain;
+        }
     }
 
     .form {
