--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,6 +28,7 @@
 @import "blocks/default/section";
 @import "blocks/default/scroll-block";
 @import "blocks/default/select2";
+@import "blocks/default/swiper";
 
 @import "layouts/body";
 @import "layouts/header";
