--- a/src/twig/pages/contacts.twig
+++ b/src/twig/pages/contacts.twig
@@ -49,6 +49,23 @@
     <div class="container-xl p-contacts__container-second">
         <div class="accordion__item margin-default">
             <div class="accordion__btn link">
+                <span class="accordion__btn-text">Владелец: ИП Дедков Д.А.</span>
+                <p class="btn-plus"><span></span></p>
+            </div>
+            <div class="accordion__text">
+                <section class="requisites">
+                    644123, Россия, Омская обл., г. Омск, ул. Конева, д. 14, кв. 87 <br>
+                    ИНН: 553402793047 <br>
+                    ОГРНИП: 321554300043937 <br>
+                    Р/с: 40802810800002396588 <br>
+                    Банк: АО «ТИНЬКОФФ БАНК» <br>
+                    К/с: 30101810145250000974 <br>
+                    БИК: 044525974
+                </section>
+            </div>
+        </div>
+        <div class="accordion__item margin-default">
+            <div class="accordion__btn link">
                 <span class="accordion__btn-text">Дистрибьютор: ООО «Торговая Компания «Параллель»</span>
                 <p class="btn-plus"><span></span></p>
             </div>
