--- a/src/sass/blocks/card-slider.scss
+++ b/src/sass/blocks/card-slider.scss
@@ -7,6 +7,19 @@
 
     &__slide-main {
         width: 100%;
+        padding-bottom: 40px !important;
+    }
+
+    &__slide-main-link {
+        display: block;
+        height: 100%;
+
+        img {
+            display: block;
+            height: 100%;
+            margin: 0 auto;
+            object-fit: contain;
+        }
     }
 
     &__slide-thumbs {
