--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -51,6 +51,7 @@
 @import "blocks/favorite-item";
 @import "blocks/order-first-step";
 @import "blocks/requisites";
+@import "blocks/add-cart-modal";
 
 @import "pages/p-index";
 @import "pages/p-catalog";
