--- a/src/twig/components/modals.twig
+++ b/src/twig/components/modals.twig
@@ -6,3 +6,5 @@
         <img src="/assets/img/catalog/sizes.png" alt="">
     </div>
 </section>
+
+{% include '../components/add-cart-modal.twig' %}
