Добавил успешное добавление в корзину модалку

--- a/src/twig/components/add-cart-modal.twig
+++ b/src/twig/components/add-cart-modal.twig
@@ -1,4 +1,4 @@
-<section class="add-cart-modal _active">
+<section class="add-cart-modal">
     <svg class="icon"><use xlink:href="#success"></use></svg>
     <p>Товар успешно добавлен в корзину!</p>
 </section>
