--- a/src/twig/pages/card.twig
+++ b/src/twig/pages/card.twig
@@ -40,19 +40,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="p-card__size-list">
-                    <div class="p-card__size-item _active js-size-item">
-                        <label class="p-card__size-item-main" for="size25">25<span>25-21</span></label>
-                        <input type="radio" id="size25" name="size">
+                <section class="p-card__size margin-small">
+                    <span class="p-card__size-sub-text">Выберите размер</span>
+                    <div class="p-card__size-list">
+                        <div class="p-card__size-item _active js-size-item">
+                            <label class="p-card__size-item-main" for="size25">25<span>25-21</span></label>
+                            <input type="radio" id="size25" name="size">
+                        </div>
+                        <div class="p-card__size-item js-size-item">
+                            <label class="p-card__size-item-main" for="size28">28<span>25-21</span></label>
+                            <input type="radio" id="size28" name="size">
+                        </div>
                     </div>
-                    <div class="p-card__size-item js-size-item">
-                        <label class="p-card__size-item-main" for="size28">28<span>25-21</span></label>
-                        <input type="radio" id="size28" name="size">
-                    </div>
-                </div>
-                <button class="p-card__size-btn link _border margin-small" type="button" data-type="modal" data-modal-link="sizes">
-                    Таблица размеров
-                </button>
+                    <button class="p-card__size-btn link _border" type="button" data-type="modal" data-modal-link="sizes">
+                        Таблица размеров
+                    </button>
+                </section>
                 <button class="btn _paper _middle">Добавить в корзину</button>
                 <div class="p-card__text">
                     Универсальная верхняя одежда, идеально подходящая как для летних прогулок, так и для демисезона.
