п.1 оформление и лк убрал выпадающие списки

--- a/src/twig/pages/order.twig
+++ b/src/twig/pages/order.twig
@@ -21,28 +21,18 @@
         <section id="firstStep" class="order-first-step p-order__step js-order-steps">
             <p class="p-order__step-title">Данные о доставке</p>
             <div class="order-first-step__form margin-default">
-                <div class="select2">
-                    <select class="js-select select2__select" name="country" id="country">
-                        <option value="AL">Россия</option>
-                        <option value="WY">Китай</option>
-                    </select>
-                    <label class="select2__label" for="country">Страна/Регион</label>
+                <div class="input2">
+                    <input class="input2__text" type="text" id="surname" required>
+                    <label class="input2__label" for="surname">Страна</label>
                 </div>
-                <div class="select2">
-                    <select class="js-select select2__select" name="city" id="city">
-                        <option value="AL1">Москва</option>
-                        <option value="WY1">Санкт-Петербург</option>
-                    </select>
-                    <label class="select2__label" for="city">Город</label>
+                <div class="input2">
+                    <input class="input2__text" type="text" id="surname" required>
+                    <label class="input2__label" for="surname">Город</label>
                 </div>
-                <div class="select2">
-                    <select class="js-select select2__select" name="obl" id="obl">
-                        <option value="AL2">Московская</option>
-                        <option value="WY2">Ленинградская</option>
-                    </select>
-                    <label class="select2__label" for="obl">Область</label>
+                <div class="input2">
+                    <input class="input2__text" type="text" id="surname" required>
+                    <label class="input2__label" for="surname">Область</label>
                 </div>
-
             </div>
             <p class="p-order__step-title">Варианты доставки</p>
             <div class="p-order__tabs">
