п.1 оформление и лк убрал выпадающие списки

--- a/src/twig/pages/lk.twig
+++ b/src/twig/pages/lk.twig
@@ -47,7 +47,7 @@
                     <label class="input2__label" for="phone">Телефон</label>
                 </div>
                 <div class="input2">
-                    <input class="input2__text phone" type="tel" id="dopPhone">
+                    <input class="input2__text" type="tel" id="dopPhone">
                     <label class="input2__label" for="dopPhone">Дополнительный телефон</label>
                 </div>
             </div>
