--- a/src/sass/pages/p-catalog.scss
+++ b/src/sass/pages/p-catalog.scss
@@ -1,17 +1,18 @@
 .p-catalog {
     .sub-menu {
-        @extend .margin-big-second
+        margin-bottom: 60px;
     }
 
     &__items {
         display: grid;
         grid-template-columns: 1fr;
-        grid-gap: 60px;
+        grid-gap: 24px;
         @include media-breakpoint-up(sm) {
             grid-template-columns: repeat(2, 1fr);
         }
         @include media-breakpoint-up(lg) {
             grid-template-columns: repeat(3, 1fr);
+            grid-gap: 60px;
         }
         @include media-breakpoint-up(xl) {
             grid-template-columns: repeat(4, 1fr);
