Обновил слайдеры в карточке товара

--- a/src/twig/pages/card.twig
+++ b/src/twig/pages/card.twig
@@ -10,6 +10,7 @@
             <div class="p-card__inner">
                 <h1 class="h2 p-card__title custom-title">Футболка</h1>
                 <span class="p-card__sku">Артикул: 00324</span>
+                {% include '../components/card-slider-mobile.twig' %}
                 <div class="b-price p-card__price-wrapper margin-small">
                     <span class="b-price__item _current">2000 руб.</span>
                     <span class="b-price__item _old">3000 руб.</span>
