--- a/src/sass/blocks/card-slider.scss
+++ b/src/sass/blocks/card-slider.scss
@@ -1,9 +1,21 @@
 .card-slider {
-    display: grid;
-    grid-template-columns: 100px 1fr;
-    grid-gap: 28px;
-    width: 100%;
-    height: 480px;
+    display: none;
+    @include media-breakpoint-up(xl) {
+        display: grid;
+        grid-template-columns: 100px 1fr;
+        grid-gap: 28px;
+        width: 100%;
+        height: 480px;
+    }
+
+    &._mobile {
+        display: block;
+        max-width: 400px !important;
+        width: 100% !important;
+        @include media-breakpoint-up(xl) {
+            display: none;
+        }
+    }
 
     &__slide-main {
         width: 100%;
@@ -16,9 +28,13 @@
 
         img {
             display: block;
-            height: 100%;
+            max-height: 300px;
             margin: 0 auto;
             object-fit: contain;
+            @include media-breakpoint-up(xl) {
+                height: 100%;
+                max-height: none;
+            }
         }
     }
 
