Правки по корзине

--- a/src/twig/components/fly-cart.twig
+++ b/src/twig/components/fly-cart.twig
@@ -31,6 +31,7 @@
             <use href="#close"/>
         </svg>
     </button>
+    <h2 class="h3 margin-default">Корзина</h2>
     <div class="fly-cart__list margin-default">
         {% for key, item in cartItems %}
             <section class="fly-cart__item">
