--- a/src/sass/blocks/fly-cart.scss
+++ b/src/sass/blocks/fly-cart.scss
@@ -3,8 +3,8 @@
     top: 0;
     right: 0;
     z-index: 900;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 32px 16px 160px;
     background-color: var(--c-bg-light);
     overflow: auto;
@@ -32,12 +32,7 @@
     
     &__item {
         display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: 8px;
-        @include media-breakpoint-up(lg) {
-            grid-template-columns: 1fr 2fr;
-            grid-gap: 20px;
-        }
+        grid-template-columns: 1fr 2fr;
     }
     
     &__item-img {
