--- a/src/twig/pages/order.twig
+++ b/src/twig/pages/order.twig
@@ -222,8 +222,8 @@
                                 Я прочитал и согласен с условиями политики обработки персональных данных
                             </label>
                         </div>
-                        <div class="input">
-                            <textarea class="input__text _textarea" placeholder="Коментарий к заказу"></textarea>
+                        <div class="input _textarea">
+                            <textarea class="input__text" placeholder="Коментарий к заказу"></textarea>
                         </div>
                     </div>
                 </div>
