Карточка товара: переделать отображение  увеличенного изображения товара

--- a/src/sass/global/general.scss
+++ b/src/sass/global/general.scss
@@ -24,3 +24,14 @@ html {
 #svg-icons {
     display: none;
 }
+
+.slbImage {
+    padding: 1em 0 !important;
+}
+
+.slbCloseBtn {
+
+    @include media-breakpoint-up(lg) {
+        right: -1rem !important;
+    }
+}
