Главная: переверстать страницу

--- a/src/sass/pages/p-index.scss
+++ b/src/sass/pages/p-index.scss
@@ -1,4 +1,8 @@
 .p-index {
+    &__promo {
+        overflow: hidden;
+    }
+
     &__container {
         display: grid;
         align-items: center;
