--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -52,6 +52,7 @@
 @import "blocks/order-first-step";
 @import "blocks/requisites";
 @import "blocks/add-cart-modal";
+@import "blocks/themes-switcher";
 
 @import "pages/p-index";
 @import "pages/p-catalog";
