--- a/src/twig/components/modals.twig
+++ b/src/twig/components/modals.twig
@@ -7,4 +7,11 @@
     </div>
 </section>
 
+<section class="themes-switcher">
+    <button class="themes-switcher__btn link" data-type="theme-white" type="button">Белый фон</button>
+    <button class="themes-switcher__btn link" data-type="theme-grad" type="button">Градиент</button>
+    <button class="themes-switcher__btn link" data-type="theme-grad-light" type="button">Светлый градиент</button>
+</section>
+
+
 {% include '../components/add-cart-modal.twig' %}
