Заменить все текстовые элементы на сайте на единый шрифт (все тексты, описания и т.д.)

--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -21,7 +21,7 @@ $container-max-widths: (
 :root {
     //Шрифты
     --f-primary: 'HelveticaNeueCyr-Medium', Arial, sans-serif;
-    --f-secondary: 'Lora', Arial, sans-serif;
+    --f-secondary: 'HelveticaNeueCyr-Medium', Arial, sans-serif;
     --f-s-title: 52px;
     --f-s-h2: 32px;
     --f-s-h3: 18px;
