--- a/src/sass/blocks/default/text.scss
+++ b/src/sass/blocks/default/text.scss
@@ -1,7 +1,7 @@
 .custom-title {
     margin-bottom: 12px;
     font-family: var(--f-secondary);
-    font-style: italic;
+    //font-style: italic;
     font-weight: 600;
     line-height: 1;
     @include media-breakpoint-up(lg) {
